# hackomatic

./: .gitignore  Cargo.toml  README.md  hackomatic.toml  rust-toolchain.toml
src/: Makefile  config.rs  database.rs  database.sql  endpoints.rs  main.rs  style.css  vote.js
